# voice

./: .gitignore  CMakeLists.txt  README.md
config/: ESTConfig.cmake  FestivalConfig.cmake  LibSndFileConfig.cmake  PortAudioConfig.cmake  SphinxConfig.cmake
include/uRobotics/: Enum.h  Exception.h
include/uRobotics/api/: AsyncCommandExecuter.h  Command.h  CommandExecuter.h  CommandExecuterCollection.h  ISharedVariableInfo.h  MessageBase.h  Parser.h  Response.h  SharedVariable.h  SharedVariableGeneric.h  SharedVariableInfo.h  SharedVariableList.h  SharedVariableReport.h  SharedVariableReportType.h  SharedVariableSubscriptionReport.h  SharedVariableSubscriptionType.h  SimpleCommandManager.h  SimpleConnectionManager.h  SubscriptionInfo.h  SyncCommandExecuter.h
include/uRobotics/api/msv/: DetectedHumanFaceSV.h  LaserReadingASV.h  RecognizedSpeechSharedVariable.h
include/uRobotics/api/psv/: ByteArraySharedVariable.h  ByteSharedVariable.h  DoubleArraySharedVariable.h  DoubleSharedVariable.h  IntArraySharedVariable.h  IntSharedVariable.h  LongArraySharedVariable.h  (+3 more)
include/uRobotics/mathematics/: MathUtil.h
include/uRobotics/sockets/: Session.h  TcpPacket.h
include/uRobotics/utilities/: ProducerConsumer.h  Scanner.h  Stopwatch.h  Utils.h
src/: Misc.cpp  Misc.h  ReadCommandExecuter.cpp  ReadCommandExecuter.h  SayCommandExecuter.cpp  SayCommandExecuter.h  SoundEngine.cpp  SoundEngine.h  SpeechGenerator.cpp  SpeechGenerator.h  SpeechTask.cpp  SpeechTask.h  main.cpp
src/command_executers/: ARead.cpp  ARead.h  ASay.cpp  ASay.h  Read.cpp  Read.h  Say.cpp  Say.h
(+6 files in other folders)
